# Cascade

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: cascade.hpp  cascade_math.hpp  cascade_utils.hpp  components.hpp  game.hpp  inputs.hpp  scene.hpp  system.hpp
src/: CMakeLists.txt  cascade.cpp  cascade_math.cpp  cascade_utils.cpp  game.cpp  inputs.cpp  scene.cpp  system.cpp
